--- a/Contacto.html
+++ b/Contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>PincelArte</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,13 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="./Tienda.css">
   <!-- Fuentes -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Calligraffitti|Arima+Madurai|Oswald|Roboto+Slab|Barlow|Lobster|Saira+Condensed|Abril+Fatface" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans|Calligraffitti|Arima+Madurai|Oswald|Roboto+Slab|Barlow|Lobster|Saira+Condensed|Abril+Fatface"
+    rel="stylesheet">
   <!-- JavaScript -->
   <script type="text/javascript" src="./scriptTienda.js" async></script>
 </head>
+
 <body>
   <header>
     <div class="menu_icon">
@@ -19,16 +23,16 @@
       <div></div>
       <div></div>
     </div>
-    <span class="title"><a href="http://pastorsin.epizy.com/Tienda/index.html">PincelArte</a></span>
+    <span class="title"><a href="index.html">PincelArte</a></span>
     <ul class="nav_main">
       <li>
-        <a href="http://pastorsin.epizy.com/Tienda/index.html">Inicio</a>
+        <a href="index.html">Inicio</a>
       </li>
       <li>
-        <a href="http://pastorsin.epizy.com/Tienda/Tienda.html">Tienda</a>
+        <a href="Tienda.html">Tienda</a>
       </li>
       <li>
-        <a href="http://pastorsin.epizy.com/Tienda/Contacto.html">Contacto</a>
+        <a href="Contacto.html">Contacto</a>
       </li>
     </ul>
   </header>
@@ -36,10 +40,11 @@
     <div class="carta">
       <h1>Contactenos:</h1>
       <div class="speach">
-        Hago estos cuadros porque es mi pasión y mi hobie, todos estan hechos con mucha paciencia y dedicación... Por esto mismo ante cualquier duda o consulta no dude contactarse con nosotros
+        Hago estos cuadros porque es mi pasión y mi hobie, todos estan hechos con mucha paciencia y dedicación... Por
+        esto mismo ante cualquier duda o consulta no dude contactarse con nosotros
       </div>
       <div class="information">
-        ¿Alguna pregunta?  LLamenos al siguiente numero <br> 1234-5678<br>o envianos un mail a<br>
+        ¿Alguna pregunta? LLamenos al siguiente numero <br> 1234-5678<br>o envianos un mail a<br>
         <a href="#">mailgenerico@serviciogenerico.com</a>
       </div>
     </div>
@@ -50,4 +55,5 @@
     </div>
   </footer>
 </body>
+
 </html>
