--- a/Tienda.html
+++ b/Tienda.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>PincelArte</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,13 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="./Tienda.css">
   <!-- Fuentes -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Calligraffitti|Arima+Madurai|Oswald|Roboto+Slab|Barlow|Lobster|Saira+Condensed" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans|Calligraffitti|Arima+Madurai|Oswald|Roboto+Slab|Barlow|Lobster|Saira+Condensed"
+    rel="stylesheet">
   <!-- JavaScript -->
   <script type="text/javascript" src="./scriptTienda.js" async></script>
 </head>
+
 <body>
   <header>
     <div class="menu_icon">
@@ -19,16 +23,16 @@
       <div></div>
       <div></div>
     </div>
-    <span class="title"><a href="http://pastorsin.epizy.com/Tienda/index.html">PincelArte</a></span>
+    <span class="title"><a href="index.html">PincelArte</a></span>
     <ul class="nav_main">
       <li>
-        <a href="http://pastorsin.epizy.com/Tienda/index.html">Inicio</a>
+        <a href="index.html">Inicio</a>
       </li>
       <li>
-        <a href="http://pastorsin.epizy.com/Tienda/Tienda.html">Tienda</a>
+        <a href="Tienda.html">Tienda</a>
       </li>
       <li>
-        <a href="http://pastorsin.epizy.com/Tienda/Contacto.html">Contacto</a>
+        <a href="Contacto.html">Contacto</a>
       </li>
     </ul>
   </header>
@@ -37,7 +41,9 @@
       <img src="./img/ej4.jpg">
       <div class="text">
         <div class="title">Titulo</div>
-        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commodo consequat.</div>
         <div class="price">$2000</div>
       </div>
     </div>
@@ -45,7 +51,9 @@
       <img src="./img/ej4.jpg">
       <div class="text">
         <div class="title">Titulo</div>
-        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commodo consequat.</div>
         <div class="price">$2000</div>
       </div>
     </div>
@@ -53,7 +61,9 @@
       <img src="./img/ej4.jpg">
       <div class="text">
         <div class="title">Titulo</div>
-        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commodo consequat.</div>
         <div class="price">$2000</div>
       </div>
     </div>
@@ -61,7 +71,9 @@
       <img src="./img/ej4.jpg">
       <div class="text">
         <div class="title">Titulo</div>
-        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commodo consequat.</div>
         <div class="price">$2000</div>
       </div>
     </div>
@@ -69,7 +81,9 @@
       <img src="./img/ej4.jpg">
       <div class="text">
         <div class="title">Titulo</div>
-        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commodo consequat.</div>
         <div class="price">$2000</div>
       </div>
     </div>
@@ -77,7 +91,9 @@
       <img src="./img/ej4.jpg">
       <div class="text">
         <div class="title">Titulo</div>
-        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commodo consequat.</div>
         <div class="price">$2000</div>
       </div>
     </div>
@@ -88,4 +104,5 @@
     </div>
   </footer>
 </body>
+
 </html>
