--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>PincelArte</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,13 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="./Inicio.css">
   <!-- Fuentes -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Calligraffitti|Arima+Madurai|Oswald|Roboto+Slab|Barlow|Lobster" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans|Calligraffitti|Arima+Madurai|Oswald|Roboto+Slab|Barlow|Lobster"
+    rel="stylesheet">
   <!-- JavaScript -->
   <script type="text/javascript" src="./script.js" async></script>
 </head>
+
 <body>
   <header>
     <div class="menu_icon">
@@ -19,16 +23,16 @@
       <div></div>
       <div></div>
     </div>
-    <span class="title"><a href="http://pastorsin.epizy.com/Tienda/index.html">PincelArte</a></span>
+    <span class="title"><a href="index.html">PincelArte</a></span>
     <ul class="nav_main">
       <li>
-        <a href="http://pastorsin.epizy.com/Tienda/index.html">Inicio</a>
+        <a href="index.html">Inicio</a>
       </li>
       <li>
-        <a href="http://pastorsin.epizy.com/Tienda/Tienda.html">Tienda</a>
+        <a href="Tienda.html">Tienda</a>
       </li>
       <li>
-        <a href="http://pastorsin.epizy.com/Tienda/Contacto.html">Contacto</a>
+        <a href="Contacto.html">Contacto</a>
       </li>
     </ul>
   </header>
@@ -46,13 +50,17 @@
         <img src="./img/arrow_down.png" height="50px" width="50px">
       </div>
     </div>
-  </div>    
+  </div>
   <div id="galery">
     <div class="box">
       <div class="picture">
         <img src="./img/ej1.jpg" width="500" height="200">
         <span>Titulo 1</span>
-        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
         </div>
       </div>
     </div>
@@ -60,7 +68,11 @@
       <div class="picture">
         <img src="./img/ej2.jpg" width="500" height="200">
         <span>Titulo 2</span>
-        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
         </div>
       </div>
     </div>
@@ -68,7 +80,11 @@
       <div class="picture">
         <img src="./img/ej3.jpg" width="500" height="200">
         <span>Titulo 3</span>
-        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
         </div>
       </div>
     </div>
@@ -76,7 +92,11 @@
       <div class="picture">
         <img src="./img/ej4.jpg" width="500" height="200">
         <span>Titulo 4</span>
-        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
         </div>
       </div>
     </div>
@@ -84,7 +104,11 @@
       <div class="picture">
         <img src="./img/ej5.jpg" width="500" height="200">
         <span>Titulo 5</span>
-        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
         </div>
       </div>
     </div>
@@ -92,7 +116,11 @@
       <div class="picture">
         <img src="./img/ej6.jpg" width="500" height="200">
         <span>Titulo 6</span>
-        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+          eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
         </div>
       </div>
     </div>
@@ -108,4 +136,5 @@
     </div>
   </footer>
 </body>
+
 </html>
